--- a/API_Test_get/src/main/resources/application.properties
+++ b/API_Test_get/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=API_Test_get
+
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3307/hello
 spring.datasource.username=root
 spring.datasource.password=1234
