--- a/API_Test_get/pom.xml
+++ b/API_Test_get/pom.xml
@@ -50,6 +50,15 @@
 			<scope>test</scope>
 		</dependency>
 		
+		
+	
+    <!-- Spring Boot Starter Security -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+		
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
 <dependency>
 <groupId>org.springframework.boot</groupId>
