--- a/Spring_Graphsql/src/main/resources/application.properties
+++ b/Spring_Graphsql/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
